--- a/assets/scss/abstracts/_variable.scss
+++ b/assets/scss/abstracts/_variable.scss
@@ -24,11 +24,11 @@ $font-weight-large:500;
 $font-weight-bold: 600;
 $font-weight-extrabold:700; 
 
-$breakpoint-xs: 320px;    /*mobile */
-$breakpoint-sm: 576px;    /* tablets*/
-$breakpoint-md: 768px;    /* tablets/large phones*/
-$breakpoint-lg: 1024px;   /* desktops*/
-$breakpoint-xl: 1200px;   /* large desktops*/
+$breakpoint-xs: 320px;  
+$breakpoint-sm: 576px;    
+$breakpoint-md: 768px;   
+$breakpoint-lg: 1024px;   
+$breakpoint-xl: 1200px;   
 
 $font-family-primary:"Plus Jakarta Sans";
 
