--- a/assets/scss/pages/_dashboard.scss
+++ b/assets/scss/pages/_dashboard.scss
@@ -1,6 +1,28 @@
-.dashboard{
+.dashboard {
     display: flex;
     max-width: 1440px;
     margin: 0 auto;
     width: 100%;
+
+
 }
+
+// .dashboard__backdrop {
+
+//     display: none;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100vw;
+//     height: 100vh;
+//     background: rgba(0, 0, 0, 0.5);
+    
+//     z-index: 900;
+    
+
+// }
+
+
+// .dashboard__sidebar.show ~ .dashboard__backdrop {
+//     display: block;
+// }
