--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -11,6 +11,18 @@
     text-decoration: none;
     color: inherit;
   }
+
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: $font-family-primary;
+    font-weight: 400 !important;
+    background-color: #F7F7FB;
+ 
+    
+}
   // body{
     
   // }
