--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -1,13 +1,11 @@
-
-
 .dashboard__sidebar {
   width: 280px;
   background-color: #FFFFFF;
   transition: width 0.3s ease;
-  
 
 
-  &.open{
+
+  &.open {
     width: 250px;
   }
 
@@ -32,14 +30,16 @@
   @include media-query(650px) {
     position: fixed;
     left: -250px;
+
     &.hide {
       left: -250px;
     }
+
     &.show {
       left: 0;
       width: 250px;
     }
-  
+
   }
 
 }
@@ -66,15 +66,18 @@
   @include flex();
   width: 100%;
   padding: 14px 77px;
-  transition: padding 1s ease, background-color 1s ease; 
+  transition: padding 1s ease, background-color 1s ease;
 
   @include media-query(1150px) {
     padding: 10px 17px;
   }
+
   @include media-query(860px) {
     padding: 10px 0px;
   }
+
   background-color: #D9D9D9;
+
   img {
     width: 24px;
     height: 24px;
@@ -85,30 +88,44 @@
   width: 100%;
   display: flex;
   flex-direction: column;
- row-gap: 300px;
-  
-  height: 700px;
- 
-  
+  row-gap: 300px;
 
-  @include media-query(1050px){
+  height: 700px;
+
+
+
+  @include media-query(1050px) {
     row-gap: 50px;
-    
+
   }
 }
 
-  .sidebar__icon {
-    width: 24px;
-    height: 24px;
-    margin-right: 10px;
-  }
-  
-  .sidebar__logo-img {
-    width: 60px;
-    height: 60px;
-   
-  }
+.sidebar__icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.sidebar__logo-img {
+  width: 60px;
+  height: 60px;
+
+}
+
+// .sidebar__item{
+
+//  a span {
+//   display: inline-block;
+//   opacity: 1;
+//   transform: translateX(0);
+//   transition: opacity 0.3s ease, transform 0.3s ease;
+// }}
+
 .sidebar__item {
+  &:not(:first-child) {
+    opacity: 0.7;
+  }
+
   a {
     display: flex;
     align-items: center;
@@ -122,17 +139,60 @@
       text-align: center;
     }
 
+
     span {
-      @include media-query(500px) {
-        display: flex;
+      display: inline-block;
+      opacity: 1;
+      transform: translateX(0);
+      transition: opacity 0.3s ease, transform 0.3s ease;
+
+      @include media-query(860px) {
+
+        opacity: 0;
+        transform: translateX(-10px);
+        display: none;
+
+        @include media-query(650px) {
+          display: inline-block;
+          opacity: 1;
+
+        }
+
+      }
+
+      &.show-span {
+        display: inline-block;
+        opacity: 1;
+        transform: translateX(0);
       }
     }
   }
 }
 
-//testing
 
 
+
+
+// @media (max-width: 860px) {
+
+
+//   .sidebar__item a span {
+//     opacity: 0;
+//     transform: translateX(-10px);
+//     display: none;
+
+//     @include media-query(650px) {
+//       display: inline-block;
+//       opacity: 1;
+//     }
+//   }
+
+//   .sidebar__item a span.show-span {
+//     display: inline-block;
+//     opacity: 1;
+//     transform: translateX(0);
+//   }
+// }
 
 .sidebar__toggle {
   display: none;
@@ -141,13 +201,17 @@
   right: -14px;
   transform: translateY(-50%);
   border: 1px solid #ddd;
-  @include box($padding:0px);
+  @include box($padding: 0px);
   width: 30px;
   height: 30px;
-  @include text-style(15px,$font-weight-bold,rgba($color: #0D163A, $alpha: 0.7));
+  @include text-style(15px, $font-weight-bold, rgba($color: #0D163A, $alpha: 0.7));
   cursor: pointer;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
+
+  @include media-query(860px) {
+    display: block;
+  }
 
   @include media-query(650px) {
     display: none !important;
@@ -155,60 +219,24 @@
 
 }
 
-.sidebar__item{
-  &:not(:first-child) {
-    /* Add styles for all li except the first one */
-    opacity: 0.7;
-}
- a span {
-  display: inline-block;
-  opacity: 1;
-  transform: translateX(0);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}}
-
-
-@media (max-width: 860px) {
-  .sidebar__toggle {
-    display: block;
-  }
-
-  .sidebar__item a span {
-    opacity: 0;
-    transform: translateX(-10px);
-    display: none;
-    @include media-query(650px) {
-      display: inline-block;
-      opacity: 1;
-    }
-  }
-
-  .sidebar__item a span.show-span {
-    display: inline-block;
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
 
 
 
 
-// .dashboard__sidebar.open {
-//   width: 250px;
-// }
 
 
-.sidebar__navlink{
-  &:hover{
+.sidebar__navlink {
+  &:hover {
     border-left: 4px solid $secondary-color;
   }
-&--active {
-  border-left: 4px solid $secondary-color;
-  font-weight: $font-weight-bold;
-  font-size: 50px;
-  
-  
-}
+
+  &--active {
+    border-left: 4px solid $secondary-color;
+    font-weight: $font-weight-bold;
+    font-size: 50px;
+
+
+  }
 }
 
 
@@ -217,14 +245,14 @@
   width: 24px;
   height: 26px;
   margin-right: 14px;
-  color: red;
+
 }
 
 .sidebar__divider {
   border-bottom: 1px solid rgb(13, 22, 58, 0.3);
-  
+
   margin: 32px 30px;
- 
+
 
 }
 
@@ -252,20 +280,21 @@
   display: none;
   position: absolute;
   top: 50%;
- right: 0;
+  right: 0;
   transform: translateY(-50%);
   background: #ffffff;
   border: 1px solid #ddd;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  @include text-style($font-size-lg,bold,rgba($color: #0D163A, $alpha: 0.7));
+  @include text-style($font-size-lg, bold, rgba($color: #0D163A, $alpha: 0.7));
   cursor: pointer;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
-  @include media-query(650px){
+
+  @include media-query(650px) {
     display: block;
     // right: -10px;
-    
+
   }
 }
